--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="app">
     <header class="hero">
       <div class="overlay">
-        <h1>Your Personal AI Travel Planner Agent</h1>
+        <h1>Your Personal UTD AI Assistance Agent</h1>
         <p>Tell me where you'd like to go, and I'll build a personalized travel itinerary for you.</p>
       </div>
     </header>
